feat: make gui work properly